# telegram_thought_tracker

./: README.md  example_.env  hello.py  playgroung.ipynb  pyproject.toml  thoughts.db
src/: config.py  db_connector.py  llm_pipeline.py  main.py  prompts.yaml  prompts_config.py
